# src/config/routes.js
@@ -6,4 +6,8 @@ module.exports = (app) => {
         app.route('/accounts')
             .post(app.routes.accounts.create)
             .get(app.routes.accounts.getAll);
+
+        app.route('/accounts/:id')
+            .get(app.routes.accounts.get);
+
 };
