# src/routes/accounts.js
@@ -12,5 +12,9 @@ module.exports = (app) => {
             .then(result => res.status(200).json(result));
     }
 
-    return { create, getAll };
+    const get = (req, res) => {
+        app.services.accounts.find({id: req.params.id}).then(result => res.status(200).json(result));
+    }
+
+    return { create, getAll, get };
 };
